AbstractParser: Removed unused WhiteSpace enum. AbstractParser: Replaced HashSet<Marker> with EnumSet<Marker>
Added new FreePushbackReader class.
Replaced PushbackReader with FreePushbackReader.
Removed all try/catch statements.
RawTextParser & RefKeywordParser: getMarkerMap() now returns unmodifiable map.